[package]
name = "internal"
version = "0.1.0"
authors = ["Kyza"]
edition = "2021"
description = "Internal fields in Rust."
license = "MIT"
repository = "https://github.com/Kyza/internal"
readme = "./README.md"
keywords = ["macro", "internal", "private", "features", "proc_macro"]
categories = ["development-tools::build-utils", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

[features]
internal = []
